[gd_scene load_steps=4 format=3 uid="uid://ba1gt0ug2w16j"]

[ext_resource type="Script" path="res://gameplayReferences/combat/attackManager.gd" id="1_1rysk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_r1w6b"]
radius = 358.02

[sub_resource type="CircleShape2D" id="CircleShape2D_n80rn"]
radius = 208.002

[node name="Attack2" type="Node2D"]
script = ExtResource("1_1rysk")

[node name="attackCooldown" type="Timer" parent="."]
one_shot = true

[node name="queuedRangedAttackRange" type="Area2D" parent="."]
collision_layer = 6
collision_mask = 38

[node name="CollisionShape2D" type="CollisionShape2D" parent="queuedRangedAttackRange"]
shape = SubResource("CircleShape2D_r1w6b")
debug_color = Color(0.743882, 0.426331, 0.495349, 0.42)

[node name="queuedMeleeAttackRange" type="Area2D" parent="."]
collision_layer = 6
collision_mask = 38

[node name="CollisionShape2D" type="CollisionShape2D" parent="queuedMeleeAttackRange"]
shape = SubResource("CircleShape2D_n80rn")

[connection signal="timeout" from="attackCooldown" to="." method="_on_attack_cooldown_timeout"]
